use submit-button tag helper in a bunch of places

--- a/TASVideos/Pages/Publications/EditFiles.cshtml
+++ b/TASVideos/Pages/Publications/EditFiles.cshtml
@@ -50,7 +50,7 @@
 				<span asp-validation-for="Description" class="text-danger"></span>
 			</form-group>
 			<div class="text-center mt-3">
-				<button type="submit" class="btn btn-primary">Add</button>
+				<submit-button class="btn btn-primary">Add</submit-button>
 				<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Back To Edit</a>
 			</div>
 		</column>
