--- a/TASVideos/Pages/Publications/EditTier.cshtml
+++ b/TASVideos/Pages/Publications/EditTier.cshtml
@@ -16,7 +16,7 @@
 		</div>
 	</row>
 	<div class="text-center mt-3">
-		<button type="submit" class="btn btn-primary">Update</button>
+		<submit-button class="btn btn-primary">Update</submit-button>
 		<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Back To Edit</a>
 	</div>
 </form>
