--- a/TASVideos/Pages/Roles/AddEdit.cshtml
+++ b/TASVideos/Pages/Roles/AddEdit.cshtml
@@ -74,7 +74,7 @@
 		</row>
 	</form-group>
 	<div class="text-center mt-3">
-		<button type="submit" class="btn btn-primary">@(Model.Id.HasValue ? "Update" : "Save")</button>
+		<submit-button class="btn btn-primary">@(Model.Id.HasValue ? "Update" : "Save")</submit-button>
 		<a asp-page="List" class="btn btn-secondary">Cancel</a>
 	</div>
 </form>
