--- a/TASVideos/Pages/Submissions/Publish.cshtml
+++ b/TASVideos/Pages/Submissions/Publish.cshtml
@@ -129,7 +129,7 @@
 	<hr />
 	@await Component.RenderWiki("System/FilesEditingHelp")
 	<fullrow class="text-center">
-		<button type="submit" class="btn btn-primary">Publish</button>
+		<submit-button class="btn btn-primary">Publish</submit-button>
 		<a asp-page="View" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
 	</fullrow>
 </form>
