--- a/TASVideos/Pages/Users/IpBan.cshtml
+++ b/TASVideos/Pages/Users/IpBan.cshtml
@@ -10,7 +10,7 @@
 				<input asp-for="IpAddress" type="text" class="form-control" />
 				<span asp-validation-for="IpAddress" class="text-danger"></span>
 			</form-group>
-			<button type="submit" class="btn btn-primary">Add</button>
+			<submit-button class="btn btn-primary">Add</submit-button>
 		</column>
 		<column lg="6">
 			<p>Enter a valid IPv4 or IPv6 address or an address range</p>
