--- a/TASVideos/Pages/Flags/Edit.cshtml
+++ b/TASVideos/Pages/Flags/Edit.cshtml
@@ -48,7 +48,7 @@
 		</column>
 	</row>
 	<div class="text-center mt-3">
-		<button type="submit" class="btn btn-primary">Save</button>
+		<submit-button class="btn btn-primary">Save</submit-button>
 		<a class="btn btn-secondary" asp-page="Index">Cancel</a>
 	</div>
 </form>
