--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -109,7 +109,7 @@
 	</fullrow>
 	<div class="text-center mt-3">
 		<button id="preview-button" type="button" class="btn btn-secondary">Preview</button>
-		<button type="submit" class="btn btn-primary">Update</button>
+		<submit-button class="btn btn-primary">Update</submit-button>
 		<pub-link id="Model.Id" class="btn btn-secondary">Cancel</pub-link>
 	</div>
 </form>
