--- a/TASVideos/Pages/Tags/Create.cshtml
+++ b/TASVideos/Pages/Tags/Create.cshtml
@@ -18,7 +18,7 @@
 		</column>
 	</row>
 	<div class="text-center mt-3">
-		<button type="submit" class="btn btn-primary">Save</button>
+		<submit-button class="btn btn-primary">Save</submit-button>
 		<a asp-page="Index" class="btn btn-secondary">Cancel</a>
 	</div>
 </form>
