--- a/TASVideos/Pages/Wiki/Move.cshtml
+++ b/TASVideos/Pages/Wiki/Move.cshtml
@@ -17,7 +17,7 @@
 				<span asp-validation-for="Move.DestinationPageName" class="text-danger"></span>
 			</form-group>
 			<div class="text-center">
-				<button type="submit" class="btn btn-primary">Move</button>
+				<submit-button class="btn btn-primary">Move</submit-button>
 				<a href="/@Model.Move.OriginalPageName" class="btn btn-secondary">Cancel</a>
 			</div>
 		</div>
