simplify profile-link usage by putting the UserName in the text content if no content is provided

--- a/TASVideos/Pages/Diagnostics/PlayerPoints.cshtml
+++ b/TASVideos/Pages/Diagnostics/PlayerPoints.cshtml
@@ -13,7 +13,7 @@
 	{
 		<tr>
 			<td>
-				<profile-link username="@player.UserName">@player.UserName</profile-link>
+				<profile-link username="@player.UserName"></profile-link>
 			</td>
 			<td>
 				@Math.Round(player.Points)
