--- a/TASVideos/Pages/Forum/MoodReport.cshtml
+++ b/TASVideos/Pages/Forum/MoodReport.cshtml
@@ -6,7 +6,7 @@
 {
 	<card>
 		<cardheader>
-			<h4><profile-link username="@user.UserName">@user.UserName</profile-link></h4>
+			<h4><profile-link username="@user.UserName"></profile-link></h4>
 		</cardheader>
 		<cardbody>
 			@foreach (var mood in MoodReportModel.Moods)
