--- a/TASVideos/Pages/Forum/Posts/Unanswered.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Unanswered.cshtml
@@ -23,7 +23,7 @@
 				<a asp-page="/Forum/Topics/Index" asp-route-id="@post.TopicId">@post.TopicName</a>
 			</td>
 			<td>
-				<profile-link username="@post.AuthorName">@post.AuthorName</profile-link>
+				<profile-link username="@post.AuthorName"></profile-link>
 			</td>
 			<td><timezone-convert asp-for="@post.PostDate"/></td>
 		</tr>
