--- a/TASVideos/Pages/Forum/Topics/PollResults.cshtml
+++ b/TASVideos/Pages/Forum/Topics/PollResults.cshtml
@@ -27,7 +27,7 @@
 	{
 		<tr>
 			<td>@vote.OptionText</td>
-			<td><profile-link username="@vote.UserName">@vote.UserName</profile-link></td>
+			<td><profile-link username="@vote.UserName"></profile-link></td>
 			<td><timezone-convert asp-for="@vote.CreateTimestamp" /></td>
 			<td>@vote.IpAddress</td>
 			<td permission="ResetPollResults">
