--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -56,7 +56,7 @@
 			<div class="forum-profile-section col-lg-2 col-md-3 col-4">
 				<div class="text-center">
 					<h6>
-						<profile-link username="@Model.PosterName">@Model.PosterName</profile-link>
+						<profile-link username="@Model.PosterName"></profile-link>
 					</h6>
 				</div>
 				<div class="card-text text-left" style="line-height: 1">
