--- a/TASVideos/Pages/Publications/Authors.cshtml
+++ b/TASVideos/Pages/Publications/Authors.cshtml
@@ -21,7 +21,7 @@
 	{
 		<tr>
 			<td>
-				<profile-link username="@author.UserName">@author.UserName</profile-link>
+				<profile-link username="@author.UserName"></profile-link>
 			</td>
 			<td>
 				<a href="/Movies-List-author@(author.Id)">@author.ActivePublicationCount</a>
