--- a/TASVideos/Pages/Roles/_Role.cshtml
+++ b/TASVideos/Pages/Roles/_Role.cshtml
@@ -47,7 +47,7 @@
 			@foreach (var user in Model.Users)
 			{
 				<span class="mr-4 mb-4" style="display: inline-block">
-					<profile-link username="@user.UserName">@user.UserName</profile-link>
+					<profile-link username="@user.UserName"></profile-link>
 				</span>
 			}
 		</div>
