--- a/TASVideos/Pages/Shared/Components/Awards/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/Awards/Default.cshtml
@@ -12,7 +12,7 @@
 				<br />
 				@foreach (var user in award.Users)
 				{
-					<profile-link username="@user.UserName" class="pull-right">@user.UserName</profile-link>
+					<profile-link username="@user.UserName" class="pull-right"></profile-link>
 					<br />
 				}
 			</div>
