--- a/TASVideos/Pages/Shared/Components/EditorActivity/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/EditorActivity/Default.cshtml
@@ -8,7 +8,7 @@
 	{
 		<tr>
 			<td>
-				<profile-link username="@entry.UserName">@entry.UserName</profile-link>
+				<profile-link username="@entry.UserName"></profile-link>
 			</td>
 			<td>
 				<a asp-page="/Wiki/EditHistory" asp-route-username="@entry.UserName">@entry.WikiEdits</a>
