--- a/TASVideos/Pages/Shared/Components/HomePageFooter/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/HomePageFooter/Default.cshtml
@@ -6,7 +6,7 @@
 <hr />
 @await Component.ListSubPages(pageData, "show")
 <div class="alert alert-info" role="alert">
-	This page is intended to be the personal page for user: <profile-link username="@user">@user</profile-link>
+	This page is intended to be the personal page for user: <profile-link username="@user"></profile-link>
 	<br />
 
 	@if (Model != null)
