--- a/TASVideos/Pages/Shared/Components/MoviesByAuthor/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MoviesByAuthor/Default.cshtml
@@ -19,7 +19,7 @@
 	{
 		<card>
 			<cardheader>
-				<profile-link username="@author.Name">@author.Name</profile-link>
+				<profile-link username="@author.Name"></profile-link>
 				<span>(@author.Pubs.Count)</span>
 				<span condition="Model.MarkNewbies && Model.NewbieAuthors.Any(a => a == author.Name)" class="badge badge-success">New Author</span>
 			</cardheader>
