--- a/TASVideos/Pages/Shared/Components/PlatformAuthorLists/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/PlatformAuthorLists/Default.cshtml
@@ -18,7 +18,7 @@
 	{
 		<card>
 			<cardheader>
-				<profile-link username="@author.Name">@author.Name</profile-link>
+				<profile-link username="@author.Name"></profile-link>
 				<span>(@author.Pubs.Count)</span>
 			</cardheader>
 			<cardbody>
