--- a/TASVideos/Pages/Shared/Components/WikiUsers/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/WikiUsers/Default.cshtml
@@ -6,9 +6,7 @@
 {
 	<div class="user-card">
 		<div class="user-card-header">
-			<profile-link username="@user.UserName">
-				@user.UserName
-			</profile-link>
+			<profile-link username="@user.UserName"></profile-link>
 		</div>
 		<div class="user-card-body">
 			Publications: @user.PublicationCount
