--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -101,10 +101,10 @@
 					(@item.IntendedTier)
 				</small>
 				<small condition="item.Judge != null && item.Publisher == null">
-					<br /><profile-link username="@item.Judge">@item.Judge</profile-link>
+					<br /><profile-link username="@item.Judge"></profile-link>
 				</small>
 				<small condition="item.Publisher != null">
-					<br /><profile-link username="@item.Publisher">@item.Publisher</profile-link>
+					<br /><profile-link username="@item.Publisher"></profile-link>
 				</small>
 				<small condition="item.HoursRemainingForJudging() > 0">
 					<br />(Available for judging in @item.HoursRemainingForJudging() hours)
