--- a/TASVideos/Pages/Activity/Index.cshtml
+++ b/TASVideos/Pages/Activity/Index.cshtml
@@ -18,7 +18,7 @@
 					{
 						<tr>
 							<td>
-								<profile-link username="@judge.UserName">@judge.UserName</profile-link>
+								<profile-link username="@judge.UserName"></profile-link>
 							</td>
 							<td>
 								<a asp-page="/Activity/Judges" asp-route-username="@judge.UserName">@judge.Count</a>
@@ -47,7 +47,7 @@
 					{
 						<tr>
 							<td>
-								<profile-link username="@publisher.UserName">@publisher.UserName</profile-link>
+								<profile-link username="@publisher.UserName"></profile-link>
 							</td>
 							<td>
 								<a asp-page="/Activity/Publishers" asp-route-username="@publisher.UserName">@publisher.Count</a>
