--- a/TASVideos/Pages/Messages/Inbox.cshtml
+++ b/TASVideos/Pages/Messages/Inbox.cshtml
@@ -35,7 +35,7 @@
 				</a>
 			</td>
 			<td>
-				<profile-link username="@entry.FromUser">@entry.FromUser</profile-link>
+				<profile-link username="@entry.FromUser"></profile-link>
 			</td>
 			<td>@entry.SendDate</td>
 			<td>
