--- a/TASVideos/Pages/Games/Index.cshtml
+++ b/TASVideos/Pages/Games/Index.cshtml
@@ -82,10 +82,15 @@
 <hr />
 <h4>
 	Roms
-	<a permission="CatalogMovies" asp-page="/Games/Roms/List" asp-route-id="@Model.Game.Id" asp-route-returnUrl="@PageContext.HttpContext.ReturnUrl()" class="mb-3 pull-right btn btn-primary">Edit</a>
+	<a
+		permission="CatalogMovies"
+		asp-page="/Games/Roms/List"
+		asp-route-gameId="@Model.Game.Id"
+		asp-route-returnUrl="@PageContext.HttpContext.ReturnUrl()"
+		class="pull-right btn btn-primary">Edit</a>
 </h4>
 
-<alert type="warning" condition="!Model.Game.Roms.Any()">
+<alert type="warning" condition="!Model.Game.Roms.Any()" class="mt-3">
 	No records.
 </alert>
 <div condition="Model.Game.Roms.Any()">
