--- a/TASVideos/Pages/Games/Index.cshtml
+++ b/TASVideos/Pages/Games/Index.cshtml
@@ -9,7 +9,7 @@
 <card>
 	<cardheader>
 		<span class="float-right">
-			<a condition="@canEdit" asp-page="/Wiki/Edit" asp-route-path="@wiki" class="btn btn-primary">Edit</a>
+			<a condition="@canEdit" asp-page="/Wiki/Edit" asp-route-path="@wiki" asp-route-returnUrl="@PageContext.HttpContext.ReturnUrl()" class="btn btn-primary">Edit</a>
 		</span>
 		<h4>Description</h4>
 	</cardheader>
