--- a/TASVideos/Pages/Wiki/Edit.cshtml
+++ b/TASVideos/Pages/Wiki/Edit.cshtml
@@ -2,6 +2,7 @@
 @model EditModel
 @{
 	ViewData["Title"] = $"Editing {Model.Path}";
+	var returnUrl = HttpContext.Request.ReturnUrl();
 }
 
 <form method="POST">
@@ -27,7 +28,8 @@
 	<div class="text-center">
 		<button type="button" class="btn btn-secondary" id="preview-button">Preview</button>
 		<submit-button class="btn btn-primary">Save</submit-button>
-		<a href="/@Model.Path" class="btn btn-secondary">Cancel</a>
+		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary">Cancel</a>
+		<a condition="string.IsNullOrWhiteSpace(returnUrl)" href="/@Model.Path" class="btn btn-secondary">Cancel</a>
 	</div>
 	<div class="text-center alert-info" role="alert">
 		<label class="alert-info">
