Subs-List and submission view - don't show tier if tier is Standard (hardcoded string for now, not sure a more elegant way to do this yet)

--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -88,6 +88,7 @@
 	<sortable-table-head model-type="typeof(SubmissionListEntry)" sorting="Model.Search" />
 	@foreach (var item in Model.Submissions)
 	{
+		var showTier = !string.IsNullOrWhiteSpace(item.IntendedTier) && item.IntendedTier != "Standard";
 		<tr>
 			<td>@item.System</td>
 			<td><sub-link id="item.Id">@item.GameName</sub-link></td>
@@ -97,7 +98,7 @@
 			<td><timezone-convert asp-for="@item.Submitted" date-only="true" /></td>
 			<td>
 				@item.Status.EnumDisplayName()
-				<small condition="!string.IsNullOrWhiteSpace(item.IntendedTier)">
+				<small condition="showTier">
 					(@item.IntendedTier)
 				</small>
 				<small condition="item.Judge != null && item.Publisher == null">
