--- a/TASVideos/Pages/Wiki/PageDoesNotExist.cshtml
+++ b/TASVideos/Pages/Wiki/PageDoesNotExist.cshtml
@@ -13,7 +13,7 @@ Want to create it?
 	{
 		<li>
 			If you are an editor or have rights to edit this page,
-			<a asp-page="/Account/Login" asp-route-returnUrl="@PageContext.HttpContext.ReturnUrl()">log in</a>
+			<a asp-page="/Account/Login" asp-route-returnUrl="@HttpContext.ReturnUrl()">log in</a>
 			to edit the page.
 		</li>
 	}
