--- a/TASVideos/Pages/Games/Edit.cshtml
+++ b/TASVideos/Pages/Games/Edit.cshtml
@@ -5,6 +5,7 @@
 	ViewData["Title"] = Model.Id.HasValue
 	? $"Editing Game #{Model.Id} {Model.Game.DisplayName}"
 		: "Create a new Game entry";
+	string returnUrl = HttpContext.ReturnUrl();
 }
 <form-group>
 	<delete-button condition="@Model.CanDelete" asp-href="/Games/Edit/@(Model.Id ?? 0)?handler=Delete" class="float-right">Delete</delete-button>
@@ -66,8 +67,8 @@
 	<hr />
 	<div class="text-center">
 		<button id="submit-btn" type="submit" class="btn btn-primary">Update</button>
-		<a condition="!string.IsNullOrWhiteSpace(Model.ReturnUrl)" href="@Model.ReturnUrl" class="btn btn-secondary">Cancel</a>
-		<a condition="string.IsNullOrWhiteSpace(Model.ReturnUrl)" asp-page="List" class="btn btn-secondary">Cancel</a>
+		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary">Cancel</a>
+		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="List" class="btn btn-secondary">Cancel</a>
 	</div>
 </form>
 
