--- a/TASVideos/Pages/Games/Roms/Edit.cshtml
+++ b/TASVideos/Pages/Games/Roms/Edit.cshtml
@@ -5,6 +5,7 @@
 		? $"Editing Rom #{Model.Id} {Model.Rom.Name}"
 		: "Create A New Rom Entry";
 	var deleteLink = $"/Games/{Model.GameId}/Roms/Edit/{Model.Id ?? 0}/Delete";
+	string returnUrl = HttpContext.ReturnUrl();
 }
 
 <div class="text-danger">
@@ -59,8 +60,8 @@
 	</row>
 	<div class="text-center">
 		<button id="submit-btn" type="submit" class="btn btn-primary">Update</button>
-		<a condition="!string.IsNullOrWhiteSpace(Model.ReturnUrl)" href="@Model.ReturnUrl" class="btn btn-secondary">Cancel</a>
-		<a condition="string.IsNullOrWhiteSpace(Model.ReturnUrl)" asp-page="List" class="btn btn-secondary">Cancel</a>
+		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary">Cancel</a>
+		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="List" class="btn btn-secondary">Cancel</a>
 	</div>
 </form>
 
