--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -59,6 +59,7 @@
 				<div>
 					<img src="~/media/@Model.Screenshot.Path"
 						 alt="@Model.Screenshot.Description"
+						 title="@Model.Screenshot.Description"
 						 loading="lazy"
 						 style="max-width: 100%" />
 				</div>
