User file info - a file can have a game -> system or just a system, if there is a game, use game system, fixes #365

--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -47,10 +47,9 @@
 					For
 					<a href="/Games/@Model.GameId">@Model.GameName</a>
 
-					@if (Model.System is not null)
-					{
-						<text>(@Model.System)</text>
-					}
+					<span condition="Model.GameSystem is not null">
+						(@(Model.GameSystem ?? Model.System))
+					</span>
 				</p>
 			}
 			else if (Model.System is not null)
