--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -93,7 +93,7 @@
 			<td>@item.System</td>
 			<td><sub-link id="item.Id">@item.GameName</sub-link></td>
 			<td>@item.Branch</td>
-			<td>@($"{item.Time:g}")</td>
+			<td>@(item.Time.ToStringWithOptionalDaysAndHours())</td>
 			<td>@item.Author</td>
 			<td><timezone-convert asp-for="@item.Submitted" date-only="true" /></td>
 			<td>
