--- a/TASVideos/Pages/Shared/_Award.cshtml
+++ b/TASVideos/Pages/Shared/_Award.cshtml
@@ -1,4 +1,8 @@
 ﻿@model TASVideos.Core.Services.AwardAssignmentSummary
-<a href="/Awards/@(Model.Year.ToString())#@(Model.ShortName)_@(Model.Year)" title="Award - @Model.Description">
-	<img style="max-height: 32px; max-width: 32px" src="/awards/@($"{Model.ShortName}_{Model.Year.ToString()}.png")" alt="@Model.Description" loading="lazy" />
+@{
+	// TODO: fix file names!
+	int year = Model.Year > 2018 ? Model.Year - 2000 : Model.Year;
+}
+<a href="/Awards/@(year.ToString())#@(Model.ShortName)_@(year)" title="Award - @Model.Description">
+	<img style="max-height: 32px; max-width: 32px" src="/awards/@($"{Model.ShortName}_{year.ToString()}.png")" alt="@Model.Description" loading="lazy" />
 </a>
