make primary color blue and previous one to secondary

--- a/TASVideos/wwwroot/css/variables.scss
+++ b/TASVideos/wwwroot/css/variables.scss
@@ -1,5 +1,5 @@
-$primary: 	#6a37a0;
-$secondary: #9f76c0;
+$primary:   #105cb6;
+$secondary: #6a37a0;
 $success: 	#28a745;
 $danger: 	#dc3545;
 $warning: 	#ffc107;
