make movie link instruction gray
since this is a wiki element, it should technically be changed there, but we don't have a way to change color yet

--- a/TASVideos/Pages/Publications/View.cshtml
+++ b/TASVideos/Pages/Publications/View.cshtml
@@ -6,7 +6,10 @@
 @section PageTitle { }
 
 <partial name="_MovieModule" model="Model.Publication" />
-@await Component.RenderWiki("System/MovieLinkInstruction")
+<hr />
+<div class="text-muted">
+	@await Component.RenderWiki("System/MovieLinkInstruction")
+</div>
 <small>
 	last edited by @Model.Publication.LastUpdateUser on @Model.Publication.LastUpdateTimestamp
 </small>
