--- a/TASVideos/Pages/Publications/Index.cshtml
+++ b/TASVideos/Pages/Publications/Index.cshtml
@@ -10,4 +10,6 @@
 	<partial name="_MovieModule" model="movie" />
 	<br />
 }
-@await Component.RenderWiki("System/MovieLinkInstruction")
+<div class="text-muted">
+    @await Component.RenderWiki("System/MovieLinkInstruction")
+</div>
