--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -36,14 +36,9 @@
 		return "";
 	}
 }
-
-<div condition="@Model.ObsoletedById.HasValue" class="card-header text-danger pt-2 pb-2 bg-white">
-	<pub-link id="@Model.ObsoletedById!.Value" class="btn btn-sm btn-primary bg-danger border-danger">This movie has been obsoleted</pub-link>
-</div>
-<card class="border-0 rounded-bottom">
-	<cardheader class="d-flex flex-row align-items-center">
-		<img class="pixelart-image" condition="!string.IsNullOrWhiteSpace(Model.TierIconPath)" src="/@Model.TierIconPath" />
-        <h4 class="m-0 ml-2 mr-2">@Model.Title</h4>
+<card class="border border-primary">
+	<cardheader>
+		<img class="pixelart-image" condition="!string.IsNullOrWhiteSpace(Model.TierIconPath)" src="/@Model.TierIconPath" /> <h4 class="m-0"><a asp-page="View" asp-route-id="@Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title</span></a></h4>
 		<div class="pull-right">
 			@foreach (var flag in Model.Flags.Where(f => !string.IsNullOrWhiteSpace(f.IconPath)))
 			{
@@ -54,74 +49,58 @@
 		</div>
 	</cardheader>
 	<cardbody>
+        <row>
+            <div condition="@Model.ObsoletedById.HasValue" class="col card-subtitle text-danger">
+                <b>This movie has been obsoleted!</b>
+				<br />
+                <pub-link id="Model.ObsoletedById!.Value" class="btn btn-danger btn-sm">Obsoleting Movie</pub-link>
+            </div>
+        </row>
+		<hr />
 		<row>
-			<div class="col-md-3">
-				<div>
-					<img src="~/media/@Model.Screenshot.Path"
-						 alt="@Model.Screenshot.Description"
-						 title="@Model.Screenshot.Description"
-						 class="w-100 pixelart-image"
-						 loading="lazy" />
-				</div>
-				@foreach (var url in Model.OnlineWatchingUrls)
-				{
-					<a href="@url" class="btn btn-primary btn-sm mt-1">Watch</a>
-				}
-				<a asp-page="View" asp-route-id="@Model.Id" class="btn btn-secondary btn-sm mt-1">Publication</a>
-				<a asp-page="/Submissions/View" asp-route-id="@Model.SubmissionId" class="btn btn-secondary btn-sm mt-1">Submission</a>
-				<a permission="EditPublicationMetaData"
-				   asp-page="Edit"
-				   asp-route-id="@Model.Id"
-				   class="btn btn-secondary btn-sm mt-1">Edit</a>
-				<a permission="CatalogMovies"
-				   asp-page="/Publications/Catalog"
-				   asp-route-id="@Model.Id"
-				   class="btn btn-secondary btn-sm mt-1">Catalog</a>
-				<a condition="@Model.TopicId > 0"
-				   asp-page="/Forum/Topics/Index"
-				   asp-route-id="@Model.TopicId"
-				   class="btn btn-secondary btn-sm mt-1">
-					Discuss
-				</a>
-				<a asp-page="/Games/PublicationHistory"
-					asp-route-id="@Model.GameId"
-					asp-route-highlight="@Model.Id"
-					class="btn btn-secondary btn-sm mt-1">
-					History
-				</a>
-				<a
-					permission="EditPublicationMetaData"
-					href="/MovieMaintenanceLog?id=@Model.Id"
-					class="btn btn-secondary btn-sm mt-1">
-					Logs
-				</a>
-			</div>
+            <div class="col-md-4 mb-4 mb-md-0 text-center">
+                <div>
+                    <img src="~/media/@Model.Screenshot.Path"
+                         alt="@Model.Screenshot.Description"
+                         title="@Model.Screenshot.Description"
+                         class="w-100 pixelart-image"
+                         loading="lazy" />
+                </div>
+                @foreach (var url in Model.OnlineWatchingUrls)
+                {
+                    <a href="@url" class="btn btn-primary btn-sm mt-1">Watch</a>
+                }
+                <a asp-page="/Publications/View" asp-page-handler="Download" asp-route-id="@Model.Id" class="btn btn-primary btn-sm mt-1">Download (@System.IO.Path.GetExtension(Model.MovieFileName))</a>
+                <br />
+                <a asp-page="/Submissions/View" asp-route-id="@Model.SubmissionId" class="btn btn-secondary btn-sm mt-1">Submission</a>
+                <br />
+                <a permission="EditPublicationMetaData"
+                   asp-page="Edit"
+                   asp-route-id="@Model.Id"
+                   class="btn btn-secondary btn-sm mt-1">Edit</a>
+                <a permission="CatalogMovies"
+                   asp-page="/Publications/Catalog"
+                   asp-route-id="@Model.Id"
+                   class="btn btn-secondary btn-sm mt-1">Catalog</a>
+                <a condition="@Model.TopicId > 0"
+                   asp-page="/Forum/Topics/Index"
+                   asp-route-id="@Model.TopicId"
+                   class="btn btn-secondary btn-sm mt-1">
+                    Discuss
+                </a>
+                <a asp-page="/Games/PublicationHistory"
+                   asp-route-id="@Model.GameId"
+                   asp-route-highlight="@Model.Id"
+                   class="btn btn-secondary btn-sm mt-1">
+                    History
+                </a>
+                <a permission="EditPublicationMetaData"
+                   href="/MovieMaintenanceLog?id=@Model.Id"
+                   class="btn btn-secondary btn-sm mt-1">
+                    Logs
+                </a>
+            </div>
 			<div class="col-md-7">
-				<row>
-					<div class="col-lg-4">
-						<a asp-page="/Publications/View" asp-page-handler="Download" asp-route-id="@Model.Id">Movie file (@System.IO.Path.GetExtension(Model.MovieFileName))</a>
-						<div condition="Model.MovieFileLinks.Any()" class="mt-2">
-							@foreach (var file in Model.MovieFileLinks)
-							{
-								<a title="@file.Path" asp-page="/Publications/View" asp-page-handler="DownloadAdditional" asp-route-fileId="@file.Id">(@file.Description)</a>
-							}
-						</div>
-					</div>
-					@foreach (var torrent in Model.TorrentLinks)
-					{
-						<a class="col-lg-4" href="~/torrent/@torrent.Path">A/V file via BitTorrent @TorrentRemark(torrent.Path, torrent.Id)</a>
-					}
-					<a class="col-lg-4" condition="@(!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl))" href="@Model.MirrorSiteUrl">A/V file via Mirror</a>
-				</row>
-				<row condition="Model.ObsoletedMovies.Any()">
-					@foreach (var obsoletedMovie in Model.ObsoletedMovies)
-					{
-						<column class="mt-2 mb-2">
-							Obsoletes:<br />
-							<pub-link id="obsoletedMovie.Id">@obsoletedMovie.Title</pub-link>
-						</column>
-					}
-				</row>
 				<fullrow>
 					<div><small>@Model.CreateTimestamp.Date.ToShortDateString()</small></div>
 					@await Component.RenderWiki(LinkConstants.PublicationWikiPage + Model.Id)
@@ -142,30 +121,62 @@
 					</div>
 				</fullrow>
 			</div>
-			<div class="col-md-2">
-				<small condition="Model.GenreTags.Any()">
-					Genre:<br />
-					@foreach (var genre in Model.GenreTags)
-					{
-						<a href="/Movies-@genre.Code">@genre.DisplayName</a>
-					}
-					<br />
-				</small>
-				<small condition="Model.Tags.Any()">
-					Tags:<br />
-					@foreach (var tag in Model.Tags)
-					{
-						<a href="/Movies-@tag.Code">@tag.DisplayName</a><br />
-					}
-				</small>
-				<small condition="!string.IsNullOrWhiteSpace(Model.EmulatorVersion)">
-					Emulator Version:<br />@Model.EmulatorVersion
-				</small>
-			</div>
 			@foreach (var award in publicationAwards.OrderByDescending(a => a.Year))
 			{
 				<partial name="_Award" model="award" />
 			}
 		</row>
+		<hr />
+        <row>
+            <div class="col">
+                <row condition="Model.ObsoletedMovies.Any()">
+                    @foreach (var obsoletedMovie in Model.ObsoletedMovies)
+                    {
+                        <column class="mt-2 mb-2">
+                            Obsoletes:<br />
+                            <pub-link id="obsoletedMovie.Id">@obsoletedMovie.Title</pub-link>
+                        </column>
+                    }
+                </row>
+				<hr />
+                <row>
+                    <div class="col-lg-4">
+                        <div condition="Model.MovieFileLinks.Any()" class="mt-2">
+                            @foreach (var file in Model.MovieFileLinks)
+                            {
+                                <a title="@file.Path" asp-page="/Publications/View" asp-page-handler="DownloadAdditional" asp-route-fileId="@file.Id">(@file.Description)</a>
+                            }
+                        </div>
+                    </div>
+                    @foreach (var torrent in Model.TorrentLinks)
+                    {
+                        <a class="col-lg-4" href="~/torrent/@torrent.Path">A/V file via BitTorrent @TorrentRemark(torrent.Path, torrent.Id)</a>
+                    }
+                    <a class="col-lg-4" condition="@(!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl))" href="@Model.MirrorSiteUrl">A/V file via Mirror</a>
+                </row>
+                <row>
+                    <div class="col-md-2">
+                        <small condition="Model.GenreTags.Any()">
+                            Genre:<br />
+                            @foreach (var genre in Model.GenreTags)
+                            {
+                                <a href="/Movies-@genre.Code">@genre.DisplayName</a>
+                            }
+                            <br />
+                        </small>
+                        <small condition="Model.Tags.Any()">
+                            Tags:<br />
+                            @foreach (var tag in Model.Tags)
+                            {
+                                <a href="/Movies-@tag.Code">@tag.DisplayName</a><br />
+                            }
+                        </small>
+                        <small condition="!string.IsNullOrWhiteSpace(Model.EmulatorVersion)">
+                            Emulator Version:<br />@Model.EmulatorVersion
+                        </small>
+                    </div>
+                </row>
+            </div>
+        </row>
 	</cardbody>
 </card>
