--- a/TASVideos/wwwroot/css/variables.scss
+++ b/TASVideos/wwwroot/css/variables.scss
@@ -4,7 +4,7 @@ $success: 	#28a745;
 $danger: 	#dc3545;
 $warning: 	#ffc107;
 $info: 		#c2d4fc;
-$dark: 		#343a40;
+$dark: 		#000000;
 $light: 	#f8f9fa;
 $muted: 	#6c757d;
 $white: 	#fff;
