publication page: fix background pixel error

--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -57,7 +57,7 @@
                 <pub-link id="Model.ObsoletedById!.Value" class="btn btn-danger btn-sm">Obsoleting Movie</pub-link>
             </row>
         </div>
-        <row class="bg-bgsecondary py-3">
+        <row class="bg-bgsecondary py-3 mx-n3">
             <div class="col-auto mb-4 mb-md-0 mx-auto text-center text-md-left">
                 <div>
                     <img src="~/media/@Model.Screenshot.Path"
