--- a/TASVideos/Pages/Shared/Components/HomePageHeader/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/HomePageHeader/Default.cshtml
@@ -5,5 +5,5 @@
 <info-alert>
 	<h5 class="mb-0">This is a <a href="/HomePages">Homepage</a></h5>
 	<h5>for <profile-link username="@user"></profile-link></h5>
-	<small class="text-info">By default, all registered users can create and maintain a homepage if they choose.</small>
+	<small>By default, all registered users can create and maintain a homepage if they choose.</small>
 </info-alert>
