MoviesGameList wiki module - do not link to publications if 0 publication, fixes #323

--- a/TASVideos/Pages/Shared/Components/MoviesGameList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MoviesGameList/Default.cshtml
@@ -22,9 +22,12 @@
 				</a>
 			</td>
 			<td>
-				<a href="/Movies-@string.Join(",", game.PublicationIds.Select(p => p + "M"))">
+				<a condition="game.PublicationIds.Any()" href="/Movies-@string.Join(",", game.PublicationIds.Select(p => p + "M"))">
 					@game.PublicationIds.Count Publication(s)
 				</a>
+				<label condition="!game.PublicationIds.Any()">
+					@game.PublicationIds.Count Publications
+				</label>
 			</td>
 		</tr>
 	}
