--- a/TASVideos/wwwroot/css/site.scss
+++ b/TASVideos/wwwroot/css/site.scss
@@ -11,8 +11,16 @@ body {
 }
 
 #banner {
-	border-bottom: 4px solid #371682;
 	background: #110931 url(/images/tasvideosbg.png) no-repeat;
+
+	.site-icon {
+		position: absolute;
+		left: -4.75rem;
+		top: -2rem;
+		background: url(/images/logo-light.png) no-repeat;
+		width: 200px;
+		height: 100px;
+	}
 
 	#mantra {
 		margin-left: 54px;
@@ -62,10 +70,15 @@ h1 {
 	background: $primary;
 	color: $white;
 	width: 95%;
-
 	// box-shadow: inset 0px 0px 2px 0px #430f76;
-    // background-color: $primary;
-    // border: 1px solid #430f76;
+	// background-color: $primary;
+	// border: 1px solid #430f76;
+
+	&.publication-header {
+		border-radius: 0;
+		border-top-right-radius: .25rem;
+		border-top-left-radius: .25rem;
+	}
 }
 
 .wiki {
@@ -308,10 +321,16 @@ article.wiki table {
 
 .forum-profile-section {
 	border-right: solid 1px #eaeaea;
+	padding-right: 0;
 }
 
 .forum-post-highlight {
 	border: solid 3px;
 	border-color: $info;
 	box-shadow: #c2d4fc 0px 8px 16px;
+}
+
+.pixelart-image {
+	image-rendering: crisp-edges;
+	image-rendering: pixelated;
 }
