return page title to purple to fit better with the header

--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
 	}
 	else
 	{
-		<h1 class="mb-2 container">@title</h1>
+		<h1 class="mb-2 container bg-secondary">@title</h1>
 	}
 
 <div class="container">
