--- a/TASVideos/Pages/Shared/Components/FirstEditionTas/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/FirstEditionTas/Default.cshtml
@@ -9,7 +9,7 @@
 	<card>
 		<cardheader>
 			<a href="/@g.Key.TierName">
-				<img src="/@g.Key.TierIconPath" />
+				<img class="pixelart-image" src="/@g.Key.TierIconPath" />
 				<strong>@g.Key.TierName</strong>
 			</a>
 			&nbsp;(@g.Count())
