--- a/TASVideos/Pages/Tiers/Index.cshtml
+++ b/TASVideos/Pages/Tiers/Index.cshtml
@@ -21,7 +21,7 @@
                 @tier.Id
             </td>
             <td>
-                <img src="/@tier.IconPath" />
+                <img class="pixelart-image" src="/@tier.IconPath" />
                 @tier.Name
             </td>
             <td>
